--- a/.github/workflows/dependency-check-gradle.yml
+++ b/.github/workflows/dependency-check-gradle.yml
@@ -20,8 +20,8 @@ on:
         default: true
         required: false
     secrets:
-      slack_alerts_webhook:
-        description: The target slack alerts webhook, assuming notify_slack is passed as true.
+      slack_bot_token:
+        description: Access token for posting slack messages
         required: false
       google_cloud_service_account_key:
         description: Optional Google Cloud service account key, assuming setup_google_cloud_auth is passed as true.
@@ -39,10 +39,13 @@ jobs:
         with:
           distribution: temurin
           java-version: 11
-      - uses: google-github-actions/setup-gcloud@v0.5.1
+          cache: "gradle"
+      - uses: google-github-actions/auth@v0
         if: inputs.setup_google_cloud_auth
         with:
-          service_account_key: ${{ secrets.google_cloud_service_account_key }}
+          credentials_json: ${{ secrets.google_cloud_service_account_key }}
+      - uses: google-github-actions/setup-gcloud@v0.5.1
+        if: inputs.setup_google_cloud_auth
       - name: dependency-check
         uses: gradle/gradle-build-action@v2
         with:
@@ -52,15 +55,12 @@ jobs:
         with:
           name: dependency-check-report
           path: build/reports
-      - name: notify-slack
+      - name: Post to vulnerability-alerts channel
         if: failure() && inputs.notify_slack
-        uses: rtCamp/action-slack-notify@v2
+        id: slack
+        uses: slackapi/slack-github-action@v1.18.0
+        with:
+          channel-id: 'vulnerability-alerts'
+          slack-message: "Dependency check vulnerability report for ${{ github.repository }}: ${{ job.status }}\n${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
         env:
-          SLACK_CHANNEL: vulnerability-alerts
-          SLACK_COLOR: ${{ job.status }}
-          SLACK_ICON: https://image.pngaaa.com/813/2886813-middle.png
-          SLACK_MESSAGE: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          SLACK_TITLE: ${{ github.repository }} dependency-check vulnerability report
-          SLACK_USERNAME: ${{ github.repository }}
-          SLACK_WEBHOOK: ${{ secrets.slack_alerts_webhook }}
-          MSG_MINIMAL: true
+          SLACK_BOT_TOKEN: ${{ secrets.slack_bot_token }}
