--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -34,10 +34,12 @@ jobs:
         with:
           distribution: temurin
           java-version: 11
-      - uses: google-github-actions/setup-gcloud@v0.5.1
+      - uses: google-github-actions/auth@v0
         if: inputs.setup_google_cloud_auth
         with:
-          service_account_key: ${{ secrets.google_cloud_service_account_key }}
+          credentials_json: ${{ secrets.google_cloud_service_account_key }}
+      - uses: google-github-actions/setup-gcloud@v0.5.1
+        if: inputs.setup_google_cloud_auth
       - name: build
         uses: gradle/gradle-build-action@v2
         with:
