--- a/.github/workflows/repository-backup.yml
+++ b/.github/workflows/repository-backup.yml
@@ -51,7 +51,7 @@ jobs:
         uses: slackapi/slack-github-action@v1.18.0
         with:
           channel-id: ${{ inputs.slack_channel }}
-          slack-message: ":boom: Unable to backup ${{ github.repository }} to S3"w
+          slack-message: ":boom: Unable to backup ${{ github.repository }} to S3"
         env:
           SLACK_BOT_TOKEN: ${{ secrets.slack_bot_token }}
 
