--- a/.github/workflows/publish-containerized-gradle-app.yml
+++ b/.github/workflows/publish-containerized-gradle-app.yml
@@ -37,8 +37,8 @@ on:
         required: true
 
 env:
-  GRADLE_SWITCHES: --console=plain --info --stacktrace
-
+  GRADLE_SWITCHES: --console=plain --info --stacktrace 
+  GRGIT_AUTH_SWITCHES: "-Dorg.ajoberstar.grgit.auth.username=${{github.actor}} -Dorg.ajoberstar.grgit.auth.password=${{github.caller_github_token}}"
 jobs:
   release:
     runs-on: ubuntu-latest
@@ -46,11 +46,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
       - uses: actions/setup-java@v2
         with:
           distribution: temurin
           java-version: 11
           cache: "gradle"
+
       - name: configure-git-user
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -60,6 +62,7 @@ jobs:
         if: inputs.setup_google_cloud_auth
         with:
           credentials_json: ${{ secrets.google_cloud_service_account_key }}
+
       - uses: google-github-actions/setup-gcloud@v0.5.1
 
       - name: setup-azure-container-registry
@@ -73,11 +76,8 @@ jobs:
       - run: gcloud auth configure-docker
         if: inputs.setup_google_cloud_auth
 
-      - name: build, tag, and push docker image
-        uses: gradle/gradle-build-action@v2
+      - name: Build, tag, and push docker image
         env:
+          GCR_KEY: ${{ secrets.google_cloud_service_account_key }}
           TESTCONTAINERS_RYUK_DISABLED: true
-          GRGIT_USER: ${{ github.actor }}
-          GRGIT_PASS: ${{ secrets.caller_github_token }}
-        with:
-          arguments: ${{ env.GRADLE_SWITCHES }} -Prelease.scope=${{ inputs.release_scope }} final -x test
+        run: ./gradlew ${GRADLE_SWITCHES} ${GRGIT_AUTH_SWITCHES} -Prelease.scope=${{ inputs.release_scope }} final
