--- a/.github/workflows/dependency-check-gradle.yml
+++ b/.github/workflows/dependency-check-gradle.yml
@@ -44,47 +44,5 @@ jobs:
   dependency-check:
     runs-on: ubuntu-latest
     steps:
-      - name: Set current date as env variable
-        run: echo "TODAY=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: 11
-          cache: "gradle"
-      - uses: google-github-actions/auth@v0
-        if: inputs.setup_google_cloud_auth
-        with:
-          credentials_json: ${{ secrets.google_cloud_service_account_key }}
-      - uses: google-github-actions/setup-gcloud@v0.6.0
-        if: inputs.setup_google_cloud_auth
-      - name: dependency-check
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: ${{ env.GRADLE_SWITCHES }} dependencyCheckAggregate
-      - uses: actions/upload-artifact@v3
-        if: always() && inputs.upload_artifact
-        with:
-          name: dependency-check-report
-          path: build/reports
-      - name: Send notification of failure to Slack
-        if: failure() && inputs.notify_slack
-        id: slack
-        uses: slackapi/slack-github-action@v1.18.0
-        with:
-          channel-id: ${{ inputs.slack_channel }}
-          slack-message: "Dependency check vulnerability report for ${{ github.repository }}: ${{ job.status }}\n${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.slack_bot_token }}
-      - name: Create issue of failure
-        if: failure() && inputs.create_issue
-        id: gh-issue
-        uses: dacbd/create-issue-action@main
-        with:
-          token: ${{ github.token }}
-          title: "Dependency check vulnerability failure for ${{ github.repository }} ${{ env.TODAY }}"
-          labels: vulnerability
-          body: |
-            ### Vulnerability report for ${{ github.repository }}
-            [Failure for ${{ env.TODAY }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})
-
+      - name: Deprecation notices
+        run: echo "Dependency checks are now run from https://github.com/moderneinc/dependency-vulnerability-reports/"
