--- a/.github/workflows/publish-containerized-gradle-app.yml
+++ b/.github/workflows/publish-containerized-gradle-app.yml
@@ -4,6 +4,11 @@ name: publish-containerized-gradle-app
 on:
   workflow_call:
     inputs:
+      java_version:
+        description: What version of Java to use
+        type: number
+        default: 17
+        required: false
       release_scope:
         description: Git tagging release scope, such as major, minor, or patch.
         type: string
@@ -23,7 +28,7 @@ jobs:
       - uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 17
+          java-version: ${{ inputs.java_version }}
           cache: "gradle"
       - name: configure-git-user
         run: |
