--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -19,10 +19,6 @@ on:
         type: boolean
         default: true
         required: false
-    secrets:
-      google_cloud_service_account_key:
-        description: Optional Google Cloud service account key, assuming setup_google_cloud_auth is passed as true.
-        required: false
 
 env:
   GRADLE_SWITCHES: --console=plain --info --warning-mode=all
@@ -42,7 +38,7 @@ jobs:
       - uses: google-github-actions/auth@v0
         if: inputs.setup_google_cloud_auth
         with:
-          credentials_json: ${{ secrets.google_cloud_service_account_key }}
+          credentials_json: ${{ secrets.GCR_KEY }}
       - uses: google-github-actions/setup-gcloud@v0.6.0
         if: inputs.setup_google_cloud_auth
       - name: build
