--- a/.github/workflows/publish-containerized-gradle-app.yml
+++ b/.github/workflows/publish-containerized-gradle-app.yml
@@ -50,3 +50,11 @@ jobs:
           GRGIT_PASS: ${{ secrets.GITHUB_TOKEN }}
         with:
           arguments: ${{ env.GRADLE_SWITCHES }} -Prelease.scope=${{ inputs.release_scope }} final -x test
+      - name: Send notification on error
+        if: ${{ failure() }}
+        uses: slackapi/slack-github-action@v1.21.0
+        with:
+          channel-id: "#ops-saas-deployments"
+          slack-message: ":boom: Unable to build an artifact for ${{ github.repository }}"
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_MEESEEKS_BOT_TOKEN }}
