--- a/.github/workflows/repository-backup.yml
+++ b/.github/workflows/repository-backup.yml
@@ -12,7 +12,7 @@ on:
       slack_channel:
         description: Slack channel to post notification in the event of failure.
         type: string
-        default: alerts
+        default: ops-alerts
         required: false
     secrets:
       bucket_access_key_id:
