--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -43,7 +43,7 @@ jobs:
       - uses: google-github-actions/setup-gcloud@v1.1.0
         if: inputs.setup_google_cloud_auth
       - name: Run snapshot action
-        uses: mikepenz/gradle-dependency-submission@{latest}
+        uses: mikepenz/gradle-dependency-submission@v0.8.4
       - name: build
         uses: gradle/gradle-build-action@v2
         with:
