--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -19,6 +19,11 @@ on:
         type: boolean
         default: true
         required: false
+      publish_lsts:
+        description: Whether to attempt publishing LSTS results.
+        type: boolean
+        default: true
+        required: false
 
 env:
   GRADLE_SWITCHES: --console=plain --info --warning-mode=all
@@ -46,13 +51,14 @@ jobs:
         with:
           arguments: ${{ env.GRADLE_SWITCHES }} -Dorg.gradle.project.ast.publish.username=${{ secrets.AST_PUBLISH_USERNAME }} -Dorg.gradle.project.ast.publish.password=${{ secrets.AST_PUBLISH_PASSWORD }} build
       - name: publish-ast
-        uses: moderneinc/moderne-publish-action@v0.1.1
+        uses: moderneinc/moderne-publish-action@v0.1.9
         with:
           version: 'v0.1.35'
           publishUrl: 'https://artifactory.moderne.ninja/artifactory/moderne-private'
           publishUser: ${{ secrets.AST_PUBLISH_USERNAME }}
           publishPwd: ${{ secrets.AST_PUBLISH_PASSWORD }}
-        if: github.event_name != 'pull_request'
+          verbose: 'true'
+        if: github.event_name != 'pull_request' && inputs.publish_lsts == true
       - name: publish-tests
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always() && inputs.publish_tests
