--- a/.github/workflows/publish-maven-central.yml
+++ b/.github/workflows/publish-maven-central.yml
@@ -29,7 +29,13 @@ on:
         required: true
       gcr_key:
         description: The key necessary to authenticate with google cloud account.
-        required: true
+        required: false
+      ast_publish_username:
+        description: Username for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
+        required: false
+      ast_publish_password:
+        description: Password for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
+        required: false
 
 env:
   GRADLE_SWITCHES: --console=plain --info --stacktrace --warning-mode=all --no-daemon
@@ -40,6 +46,8 @@ env:
   ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.ossrh_token }}
   ORG_GRADLE_PROJECT_signingKey: ${{ secrets.ossrh_signing_key }}
   ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ossrh_signing_password }}
+  AST_PUBLISH_USERNAME: ${{ secrets.ast_publish_username }}
+  AST_PUBLISH_PASSWORD: ${{ secrets.ast_publish_password }}
 
 jobs:
   release:
