Also pass Gradle Enterprise secrets

--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -25,6 +25,15 @@ on:
         default: true
         required: false
     secrets:
+      gradle_enterprise_access_key:
+        description: Value of the Gradle Enterprise access token to use.
+        required: false
+      gradle_enterprise_cache_username:
+        description: Value of the Gradle Enterprise Cache username to use.
+        required: false
+      gradle_enterprise_cache_password:
+        description: Value of the Gradle Enterprise Cache password to use.
+        required: false
       gcr_key:
         description: The key necessary to authenticate with google cloud account.
         required: false
@@ -37,6 +46,7 @@ on:
 
 env:
   GRADLE_SWITCHES: --console=plain --info --warning-mode=all
+  GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.gradle_enterprise_access_key }}
   GRADLE_ENTERPRISE_CACHE_USERNAME: ${{ secrets.gradle_enterprise_cache_username }}
   GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.gradle_enterprise_cache_password }}
   AST_PUBLISH_USERNAME: ${{ secrets.ast_publish_username }}
