--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -38,12 +38,17 @@ on:
         description: The key necessary to authenticate with google cloud account.
         required: false
       ast_publish_username:
-        description: Username for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
+        description: Username for accessing the ast repository.
         required: false
       ast_publish_password:
-        description: Password for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
+        description: Password for accessing the ast repository.
         required: false
-
+      moderne_artifactory_username:
+        description: Username for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
+        required: true
+      moderne_artifactory_password:
+        description: Password for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
+        required: true
 env:
   GRADLE_SWITCHES: --console=plain --info --warning-mode=all
   GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.gradle_enterprise_access_key }}
@@ -51,6 +56,8 @@ env:
   GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.gradle_enterprise_cache_password }}
   AST_PUBLISH_USERNAME: ${{ secrets.ast_publish_username }}
   AST_PUBLISH_PASSWORD: ${{ secrets.ast_publish_password }}
+  MODERNE_ARTIFACTORY_USERNAME: ${{ secrets.moderne_artifactory_username }}
+  MODERNE_ARTIFACTORY_PASSWORD: ${{ secrets.moderne_artifactory_password }}
 
 jobs:
   build:
