--- a/.github/workflows/publish-maven-artifact.yml
+++ b/.github/workflows/publish-maven-artifact.yml
@@ -24,10 +24,10 @@ on:
         required: false
       moderne_artifactory_username:
         description: Username for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
-        required: true
+        required: false
       moderne_artifactory_password:
         description: Password for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
-        required: true
+        required: false
 
 env:
   GRADLE_OPTS: '-Dorg.gradle.jvmargs="-Xmx2048m -XX:+HeapDumpOnOutOfMemoryError"'
