Allow missing credentials for release to allow rewrite-cobol to release

--- a/.github/workflows/publish-maven-central.yml
+++ b/.github/workflows/publish-maven-central.yml
@@ -38,10 +38,10 @@ on:
         required: false
       moderne_artifactory_username:
         description: Username for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
-        required: true
+        required: false
       moderne_artifactory_password:
         description: Password for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
-        required: true
+        required: false
 
 env:
   GRADLE_SWITCHES: --console=plain --info --stacktrace --warning-mode=all --no-daemon
