--- a/.github/workflows/ci-gradle-nexus.yml
+++ b/.github/workflows/ci-gradle-nexus.yml
@@ -58,10 +58,10 @@ on:
         required: false
       moderne_artifactory_username:
         description: Username for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
-        required: true
+        required: false
       moderne_artifactory_password:
         description: Password for accessing the https://artifactory.moderne.ninja/artifactory/moderne-private repository.
-        required: true
+        required: false
 
 env:
   GRADLE_SWITCHES: --console=plain --info --stacktrace --warning-mode=all --no-daemon
