--- a/.github/workflows/ci-gradle-nexus.yml
+++ b/.github/workflows/ci-gradle-nexus.yml
@@ -77,13 +77,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          show-progress: false
       - uses: gradle/wrapper-validation-action@v1
       ########################
       # The biggest divergence point is choosing between actions/setup-java or graalvm
-      - uses: actions/setup-java@v3.10.0
+      - uses: actions/setup-java@v4
         if: (!(inputs.build_on_graal))
         with:
           distribution: temurin
@@ -98,19 +99,19 @@ jobs:
         if: inputs.build_on_graal && inputs.install_graal_languages != ''
         run: gu install ${{ inputs.install_graal_languages }}
       ########################
-      - uses: google-github-actions/auth@v1
+      - uses: google-github-actions/auth@v2
         if: inputs.setup_google_cloud_auth
         with:
           credentials_json: ${{ secrets.GCR_KEY }}
-      - uses: google-github-actions/setup-gcloud@v1.1.1
+      - uses: google-github-actions/setup-gcloud@v2
         if: inputs.setup_google_cloud_auth
       - name: build
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
         with:
           arguments: ${{ env.GRADLE_SWITCHES }} build
       - name: publish-snapshots
         if: inputs.publish_snapshots && github.event_name != 'pull_request' && github.repository_owner == 'moderneinc'
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
         with:
           arguments: ${{ env.GRADLE_SWITCHES }} snapshot publish -PforceSigning -x test
         env:
