--- a/.github/workflows/publish-maven-artifact.yml
+++ b/.github/workflows/publish-maven-artifact.yml
@@ -44,11 +44,12 @@ jobs:
     if: github.repository_owner == 'moderneinc'
     steps:
       - name: git-checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          show-progress: false
       - name: set-up-jdk
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
@@ -58,9 +59,9 @@ jobs:
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
       - name: setup-gcloud
-        uses: google-github-actions/auth@v1
+        uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.google_cloud_service_account_key }}
-      - uses: google-github-actions/setup-gcloud@v1.1.1
+      - uses: google-github-actions/setup-gcloud@v2
       - name: build, test, and publish jar
         run: ./gradlew ${GRADLE_SWITCHES} ${GRGIT_AUTH_SWITCHES} -Prelease.scope=${{ inputs.release_scope }} final
