--- a/.github/workflows/publish-maven-central.yml
+++ b/.github/workflows/publish-maven-central.yml
@@ -61,22 +61,23 @@ jobs:
   release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-      - uses: actions/setup-java@v3.10.0
+          show-progress: false
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
-      - uses: google-github-actions/auth@v1
+      - uses: google-github-actions/auth@v2
         if: inputs.setup_google_cloud_auth
         with:
           credentials_json: ${{ secrets.GCR_KEY }}
-      - uses: google-github-actions/setup-gcloud@v1.1.1
+      - uses: google-github-actions/setup-gcloud@v2
         if: inputs.setup_google_cloud_auth
       - name: publish-candidate
         if: contains(github.ref, '-rc.')
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
         with:
           arguments: |
             ${{ env.GRADLE_SWITCHES }}
@@ -89,7 +90,7 @@ jobs:
 
       - name: publish-release
         if: (!contains(github.ref, '-rc.'))
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/gradle-build-action@v3
         with:
           arguments: |
             ${{ env.GRADLE_SWITCHES }}
