--- a/.github/workflows/repository-backup.yml
+++ b/.github/workflows/repository-backup.yml
@@ -35,9 +35,10 @@ jobs:
   repository-backup:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          show-progress: false
       - uses: peter-evans/s3-backup@v1
         env:
           ACCESS_KEY_ID: ${{ secrets.bucket_access_key_id }}
