Use correct workflow

--- a/.github/workflows/publish-maven-artifact.yml
+++ b/.github/workflows/publish-maven-artifact.yml
@@ -9,11 +9,6 @@ on:
         default: minor
         type: string
         required: true
-      runner:
-        description: Which runner to use
-        default: ubuntu-latest
-        type: string
-        required: false
     secrets:
       google_cloud_service_account_key:
         description: Optional Google Cloud service account key, assuming setup_google_cloud_auth is true.
@@ -45,7 +40,7 @@ env:
 
 jobs:
   release:
-    runs-on: ${{ inputs.runner }}
+    runs-on: ubuntu-latest
     if: github.repository_owner == 'moderneinc'
     steps:
       - name: git-checkout
