--- a/.github/workflows/publish-containerized-gradle-app.yml
+++ b/.github/workflows/publish-containerized-gradle-app.yml
@@ -14,13 +14,18 @@ on:
         type: string
         required: true
         default: minor
+      runner:
+        description: Which runner to use
+        default: ubuntu-latest
+        type: string
+        required: false
 
 env:
   GRADLE_SWITCHES: --console=plain --info --stacktrace
 
 jobs:
   release:
-    runs-on: ubuntu-latest
+    runs-on: ${{ inputs.runner }}
     steps:
       - uses: actions/checkout@v3
         with:
